--- a/server/package.json
+++ b/server/package.json
@@ -19,7 +19,9 @@
     "dotenv": "^16.4.6",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.11.5",
+    "path": "^0.12.7",
     "zod": "^3.23.8"
   },
   "devDependencies": {
